Crostini: migrate persisted paths from Downloads to MyFiles

When MyFiles is enabled, check persisted paths in prefs
and convert paths as needed.

Bug: 911946
Change-Id: I3931d196f89f31fa2ae95f7e02f9241b25d23524
Reviewed-on: https://chromium-review.googlesource.com/c/1366458
Commit-Queue: Joel Hockey <joelhockey@chromium.org>
Reviewed-by: Luciano Pacheco <lucmult@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614617}
Former-commit-id: aa7bc76e086df2f9428a2d583546f84f81c59d16