chrome/browser/chromeos/file_manager/path_util.cc
@@ -176,6 +176,23 @@ bool MigratePathFromOldFormat(Profile* profile,
   return false;
 }
 
+bool MigrateFromDownloadsToMyFiles(Profile* profile,
+                                   const base::FilePath& old_path,
+                                   base::FilePath* new_path) {
+  const base::FilePath old_base =
+      profile->GetPath().Append(kFolderNameDownloads);
+  const base::FilePath new_base = GetDownloadsFolderForProfile(profile);
+  if (new_base == old_base)
+    return false;
+  base::FilePath relative;
+  if (old_path == old_base ||
+      old_base.AppendRelativePath(old_path, &relative)) {
+    *new_path = new_base.Append(relative);
+    return old_path != *new_path;
+  }
+  return false;
+}
+
 std::string GetDownloadsMountPointName(Profile* profile) {
   // To distinguish profiles in multi-profile session, we append user name hash
   // to "Downloads". Note that some profiles (like login or test profiles)
